--- a/meleon/package.json
+++ b/meleon/package.json
@@ -50,11 +50,12 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.11.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.4.3",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
+    "sass": "^1.56.1",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
